# miniClaudeCode

./: .gitignore  main.py  output.json  pyproject.toml  team.py
.sessions/: test_corrupt.json.bak-20260402T113234Z
.sisyphus/: boulder.json
.sisyphus/drafts/: fastapi-react-mvp.md
.sisyphus/notepads/live2d-lead-web-ui/: learnings.md
.sisyphus/plans/: live2d-lead-web-ui.md
.tasks/: task_1.json  task_2.json  task_3.json  task_4.json
.transcripts/: transcript_1774974621.jsonl
backend/: main.py
backend/api/: chat.py
backend/core/: __init__.py  chat_engine.py  live2d_mapper.py  memory_adapter.py  schema.py  session_store.py
docs/: mini-claude-code-architecture.md
docs/plans/: 2026-04-01-live2d-chat-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/public/341_school_winter-2023_rip_外套敞开/: model.json
frontend/src/: main.tsx
frontend/src/chat/: LeadChatTransport.test.ts  LeadChatTransport.ts  useLeadChat.test.tsx  useLeadChat.ts
frontend/src/router/: index.ts
frontend/src/store/: counter.ts
graph/: execute_tool_calls.py  message_compaction.py  prepare_main_messages.py  tool_policy.py
graph/skills/code-review/: SKILL.md
graph/skills/git/: SKILL.md
graph/tools/: __init__.py  background_task.py  compact.py  list_dir.py  load_skill.py  read_file.py  safe_path.py  sub_agent_task.py  summarize_messages.py  todo_list.py  web_search.py  write_file.py
public/341_casual-2023/: model.json
tests/: test_main_cli.py  test_memory_adapter.py  test_team_manager.py
workplace/: test.txt
(+13 files in other folders)
