[project]
name = "claudestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "cuid2>=2.0.1",
    "isort>=8.0.1",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
]
